detail setup eklendi
