# public/docs/openapi.yaml
@@ -26,11 +26,11 @@ paths:
                 phone:
                   type: string
                   description: ''
-                  example: aspernatur
+                  example: in
                 password:
                   type: string
                   description: ''
-                  example: "l%(q:eD%zAKk`_'#"
+                  example: 'Apl1mW\)%pYS]^lr(#)'
               required:
                 - phone
                 - password
@@ -151,7 +151,7 @@ paths:
     post:
       summary: 'POST api/business-service/add'
       operationId: pOSTApibusinessServiceadd
-      description: "Hizmetlerin listesini döndürecek size buradaki hizmet listesinden seçilen hizmetlerden seçilen hizmet eklenecek\n<br> Gerekli alanlar\n<ul>\n<li> token </li>\n<li> typeId |required | cinsiyet id si gelecek buradan  </li>\n<li> categoryId |required | hizmetin category id si gelecek buradan  </li>\n<li> subCategoryId |required | hizmetin sub_category id si gelecek buradan  </li>\n<li> time |required | hizmetin süresi gelecek buradan  </li>\n<li> price |required | hizmetin fiyatı gelecek buradan  </li>\n</ul>"
+      description: "Hizmetlerin listesini döndürecek size buradaki hizmet listesinden seçilen hizmetlerden seçilen hizmet eklenecek\n<br> Gerekli alanlar\n<ul>\n<li> token </li>\n<li> type_id |required | cinsiyet id si gelecek buradan  </li>\n<li> category |required | hizmetin category id si gelecek buradan  </li>\n<li> sub_category |required | hizmetin sub_category id si gelecek buradan  </li>\n<li> time |required | hizmetin süresi gelecek buradan  </li>\n<li> price |required | hizmetin fiyatı gelecek buradan  </li>\n</ul>"
       parameters:
         -
           in: header
@@ -186,6 +186,40 @@ paths:
       summary: 'POST api/business-service/delete'
       operationId: pOSTApibusinessServicedelete
       description: "id si gönderilen işletme hizmetinin bilgilerini getirecek\n<br> Gerekli alanlar\n<ul>\n<li> token </li>\n<li>businessServiceId | required | güncellenecek hizmetin idsi</li>\n</ul>"
+      parameters:
+        -
+          in: header
+          name: Bearer
+          description: ''
+          example: '{token}'
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - BusinessService
+      security: []
+  /api/business/business-service/gender/get:
+    post:
+      summary: 'POST api/business/business-service/gender/get'
+      operationId: pOSTApibusinessbusinessServicegenderget
+      description: "id si gönderilen işletme hizmetinin bilgilerini getirecek\n<br> Gerekli alanlar\n<ul>\n<li> token </li>\n<li>gender | required | getirilecek cinsiyet türü id si</li>\n</ul>"
+      parameters:
+        -
+          in: header
+          name: Bearer
+          description: ''
+          example: '{token}'
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - BusinessService
+      security: []
+  /api/business/business-service/category/get:
+    post:
+      summary: 'POST api/business/business-service/category/get'
+      operationId: pOSTApibusinessbusinessServicecategoryget
+      description: "id si gönderilen işletme hizmetinin bilgilerini getirecek\n<br> Gerekli alanlar\n<ul>\n<li> token </li>\n<li>category_id | required | getirilecek cinsiyet türü id si</li>\n</ul>"
       parameters:
         -
           in: header
@@ -486,23 +520,23 @@ paths:
                 name:
                   type: string
                   description: 'Must be at least 3 characters.'
-                  example: olekemwjpownparsmvweusbcbcugulkszlkpnjsqrt
+                  example: miianxexgituasftclcglj
                 phone:
                   type: string
                   description: 'Must be at least 10 characters.'
-                  example: ffluxcufdufihhpjzmahipbnpjkffpzyqcrhwzuqllsdtybnhbrbesxxgkvmtdbocsezqpm
+                  example: sgmmwdytkzlhkcpaxmltrxarvndyuqlvs
                 email:
                   type: string
                   description: 'Must be at least 8 characters.'
-                  example: cwolf@example.net
+                  example: wschamberger@example.org
                 password:
                   type: string
                   description: 'Must be at least 8 characters.'
-                  example: "MXeYc%'];mJm%5f}2zt["
+                  example: 'vViK!^v*$!Iz[nxq11R'
                 gender:
                   type: string
                   description: ''
-                  example: saepe
+                  example: debitis
               required:
                 - name
                 - phone
@@ -581,43 +615,43 @@ paths:
                 officialName:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: jvcicicfx
+                  example: cs
                 businessName:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: sgbrmghpfaaedojv
+                  example: yhzn
                 appointmentRange:
                   type: number
                   description: ''
-                  example: 256.721426
+                  example: 126124524.97426
                 phone:
                   type: string
                   description: 'Must be at least 11 characters.'
-                  example: ehukgzhpvedcorcebprlyvcsosnvcoazblyokblemyohqydouduyapsnbwb
+                  example: clljigbrwppwhjppfvibopsihifaiwgjt
                 startTime:
                   type: string
                   description: ''
-                  example: omnis
+                  example: debitis
                 endTime:
                   type: string
                   description: ''
-                  example: laudantium
+                  example: officiis
                 email:
                   type: string
                   description: ''
-                  example: wilber98@example.net
+                  example: rosenbaum.bart@example.org
                 year:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2023-10-30T14:46:10'
+                  example: '2023-10-30T17:14:11'
                 address:
                   type: string
                   description: ''
-                  example: ut
+                  example: aut
                 aboutText:
                   type: string
                   description: ''
-                  example: quia
+                  example: modi
               required:
                 - officialName
                 - businessName
@@ -713,31 +747,31 @@ paths:
                 customer_id:
                   type: string
                   description: ''
-                  example: dicta
+                  example: molestias
                 service_id:
                   type: string
                   description: ''
-                  example: animi
+                  example: assumenda
                 amount:
                   type: string
                   description: ''
-                  example: sint
+                  example: molestiae
                 total:
                   type: string
                   description: ''
-                  example: ut
+                  example: qui
                 personel_id:
                   type: string
                   description: ''
-                  example: libero
+                  example: recusandae
                 package_type:
                   type: string
                   description: ''
-                  example: amet
+                  example: soluta
                 seller_date:
                   type: string
                   description: ''
-                  example: quisquam
+                  example: odio
               required:
                 - customer_id
                 - service_id
@@ -766,15 +800,15 @@ paths:
                 package_id:
                   type: string
                   description: ''
-                  example: in
+                  example: quas
                 price:
                   type: string
                   description: ''
-                  example: amet
+                  example: nulla
                 amount:
                   type: string
                   description: ''
-                  example: et
+                  example: minus
               required:
                 - package_id
                 - price
@@ -799,19 +833,19 @@ paths:
                 package_id:
                   type: string
                   description: ''
-                  example: quas
+                  example: sunt
                 personel_id:
                   type: string
                   description: ''
-                  example: neque
+                  example: ut
                 amount:
                   type: string
                   description: ''
-                  example: eum
+                  example: tenetur
                 operation_date:
                   type: string
                   description: ''
-                  example: vel
+                  example: aut
               required:
                 - package_id
                 - personel_id
@@ -1390,11 +1424,11 @@ paths:
                 phone:
                   type: string
                   description: ''
-                  example: aut
+                  example: enim
                 password:
                   type: string
                   description: ''
-                  example: 'K,LIXJ{[I+|"7K$|'
+                  example: '^?%P![ILj~3y'
               required:
                 - phone
                 - password
